--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>simplifyOS</title>
+    <link rel="icon" type="image/png" href="https://simplifyos.cloud/logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
@@ -11,3 +12,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
